--- a/pagine/index.html
+++ b/pagine/index.html
@@ -58,12 +58,12 @@ if (screen.width <= 900) {
   window.location.href = "/Mobile.html";
 }
 
-// Dopo 4800ms fai partire la salita
+// salita dopo 4800ms
 document.addEventListener("DOMContentLoaded", function() {
   setTimeout(function() {
     const preloader = document.getElementById("preloader");
     preloader.classList.add("slide-up");
-  }, 4800); // 4800 millisecondi = 4,8 secondi
+  }, 4800); 
 });
 </script>
 
