--- a/pagine/bevelle.html
+++ b/pagine/bevelle.html
@@ -1,1 +1,18 @@
-<meta http-equiv="refresh" content="0; url=https://slowbikegubbio.it/bevelle.html" />
+<!DOCTYPE html>
+<html lang="it">
+<head><body>
+  <title>Tour Bevelle | SlowBike Gubbio</title>
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+<body>
+  <iframe src="https://gabrielelilli1105.wixstudio.io/slowbike/bevelle" style="position:fixed; top:-29px; left:0px; bottom:0px; right:0px; width:100%; height:105%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+</iframe>
+</head>
+<script type="text/javascript">
+  <!--
+  if (screen.width <= 900) {
+  document.location = "/mobilebevelle.html";
+  }
+  //-->
+  </script>
+</body>
+</html>
