--- a/pagine/mobilebevelle.html
+++ b/pagine/mobilebevelle.html
@@ -1,1 +1,12 @@
+<html>
+  <title>Tour Bevelle | SlowBike Gubbio</title>
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <body>
+  
+     <iframe src="https://gabrielelilli1105.wixstudio.io/slowbike/bevelle" style="    position: fixed;    left: 0px;    top: -30px;    width: 100%;    height: 108%">
+</iframe>
+    
+  </body>
+</html>
