--- a/pagine/mobilebevello.html
+++ b/pagine/mobilebevello.html
@@ -1,12 +1,1 @@
-<html>
-  <title>Tour Bevello | SlowBike Gubbio</title>
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <body>
-  
-     <iframe src="https://gabrielelilli1105.wixstudio.io/slowbike/bevello" style="    position: fixed;    left: 0px;    top: -30px;    width: 100%;    height: 108%">
-</iframe>
-    
-  </body>
-</html>
+<meta http-equiv="refresh" content="0; url=https://slowbikegubbio.it/mobilebevelle.html" />
