actual pages on site

--- a/pagine/valdichiascio.html
+++ b/pagine/valdichiascio.html
@@ -1,16 +1,36 @@
-</head><body>
-  <title>SlowBike Gubbio</title>
-  <link rel="icon" type="image/x-icon" href="/youriconhere.ico">
-
-
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8" />
+  <title>Valdichiascio | SlowBike Gubbio</title>
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+    }
+    iframe {
+      position: fixed;
+      left: 0px;
+      top: -29px;
+      width: 100%;
+      height: 105%;
+      border: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      z-index: 999999;
+    }
+  </style>
+</head>
 <body>
-  <iframe src="https://gabrielelilli1105.wixstudio.io/slowbike/valdichiascio" style="position:fixed; top:-29px; left:0px; bottom:0px; right:0px; width:100%; height:105%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
-</iframe>  
-<script type="text/javascript">
-  <!--
-  if (screen.width <= 900) {
-  document.location = "/mobilevaldichiascio.html";
-  }
-  //-->
-  </script>
-</body></html>
+
+  <iframe src="https://gabrielelilli1105.wixstudio.com/slowbike/valdichiascio"></iframe>
+
+  <script src="/js/mobile-fix.js"></script>
+
+</body>
+</html>
