--- a/pagine/percorsi.html
+++ b/pagine/percorsi.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
-  <title>Tour Bevelle | SlowBike Gubbio</title>
+  <title>Percorsi | SlowBike Gubbio</title>
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
@@ -28,7 +28,7 @@
 </head>
 <body>
 
-  <iframe src="https://gabrielelilli1105.wixstudio.io/slowbike/bevelle"></iframe>
+  <iframe src="https://gabrielelilli1105.wixstudio.com/slowbike/percorsi"></iframe>
 
   <script src="/js/mobile-fix.js"></script>
 
