--- a/index.html
+++ b/index.html
@@ -1,96 +1,30 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="SlowBike Gubbio - Percorsi ed esperienze in sella nel territorio di Gubbio">
-    <title>Home | SlowBike Gubbio</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      overflow: hidden;
-    }
-
-    /* Preloader */
-    #preloader {
-      background-color: #FFEDD5;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      overflow: hidden;
-      z-index: 999999;
-      transform: translateY(0);
-      transition: transform 1.8s cubic-bezier(0.77, 0, 0.175, 1);
-    }
-
-    /* Animazione salita */
-    #preloader.slide-up {
-      transform: translateY(-100%);
-    }
-
-    /* Video desktop */
-    #preloader video {
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
-      object-position: center;
-      transform: scale(1.05);
-    }
-
-    /* Adattamento mobile */
-    @media (max-width: 900px) {
-      #preloader video {
-      object-fit: contain;
-      transform: scale(1);
-      }
-    }
-
-    /* Iframe container */
-    #iframe-container {
-      position: absolute;
-      top: -30px; 
-      left: 0;
-      width: 100%;
-      height: calc(100% + 30px);
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      z-index: 1;
-    }
-
-    #iframe-container iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="description" content="SlowBike Gubbio - Percorsi ed esperienze in sella nel territorio di Gubbio">
+  <title>Home | SlowBike Gubbio</title>
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
 
-<!-- PRELOADER -->
-<div id="preloader">
-  <video autoplay muted playsinline>
-    <source src="https://slowbikegubbio.it/preloader3.mp4" type="video/mp4">
-    Il tuo browser non supporta il video HTML5.
-  </video>
-</div>
+  <!-- PRELOADER -->
+  <div id="preloader">
+    <video autoplay muted playsinline>
+      <source src="https://slowbikegubbio.it/preloader3.mp4" type="video/mp4">
+      Il tuo browser non supporta video HTML5.
+    </video>
+  </div>
 
-<!-- IFRAME -->
-<div id="iframe-container">
-  <iframe src="https://gabrielelilli1105.wixstudio.io/slowbike" scrolling="yes"></iframe>
-</div>
+  <!-- IFRAME -->
+  <div id="iframe-container">
+    <iframe src="https://gabrielelilli1105.wixstudio.io/slowbike" scrolling="yes"></iframe>
+  </div>
 
-<!-- SCRIPT -->
-<script src="/js/index.js"></script>
+  <!-- SCRIPT -->
+  <script src="/js/index.js"></script>
 </body>
 </html>
