--- a/pagine/percorsi.html
+++ b/pagine/percorsi.html
@@ -5,105 +5,32 @@
   <title>Percorsi | SlowBike Gubbio</title>
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/css/subpages.css" />
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+    }
+    iframe {
+      position: fixed;
+      left: 0px;
+      top: -29px;
+      width: 100%;
+      height: 105%;
+      border: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      z-index: 999999;
+    }
+  </style>
 </head>
 <body>
 
-  <!-- Header -->
-  <header class="site-header">
-    <div class="container">
-      <a href="/" class="logo">
-        <img src="https://static.wixstatic.com/media/6e451a_67e1a060deac4653af1e1de45458021e~mv2.png/v1/fill/w_49,h_48,al_c,q_85,usm_0.66_1.00_0.01,blur_2,enc_avif,quality_auto/cropped-SlowBikeGubbio%20(1)_edited.png" alt="SlowBike Gubbio Logo">
-        <span>SlowBikeGubbio</span>
-      </a>
-      <nav class="main-nav">
-        <a href="/">Home</a>
-        <a href="/pagine/percorsi.html" class="active">Percorsi</a>
-        <a href="/pagine/blog.html">Blog</a>
-        <a href="/pagine/contattaci.html">Contattaci</a>
-      </nav>
-    </div>
-  </header>
+  <iframe src="https://gabrielelilli1105.wixstudio.com/slowbike/percorsi"></iframe>
 
-  <!-- Page Hero -->
-  <section class="page-hero">
-    <h1>I Nostri Percorsi</h1>
-    <p>Scopri tutti i nostri itinerari in bicicletta nel territorio di Gubbio</p>
-  </section>
-
-  <!-- Routes Content -->
-  <section class="content-section">
-    <div class="container">
-      <div class="route-grid">
-        
-        <div class="route-item">
-          <img src="https://static.wixstatic.com/media/6e451a_94afe0ffa0924ff8936a093c34e3d5b9~mv2.jpg/v1/fill/w_300,h_200,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/bike-store-edited%20(1).jpg" alt="Bevelle">
-          <div class="route-item-content">
-            <h3>Bevelle</h3>
-            <p>Un percorso attraverso le colline di Bevelle</p>
-            <a href="/pagine/bevelle.html" class="btn-primary">Scopri di più</a>
-          </div>
-        </div>
-
-        <div class="route-item">
-          <img src="https://static.wixstatic.com/media/6e451a_3e8b75d98f8649ac9e821c2f9dcce4ff~mv2.jpg/v1/fill/w_300,h_200,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/valdichiascio.jpg" alt="Val di Chiascio">
-          <div class="route-item-content">
-            <h3>Val di Chiascio</h3>
-            <p>Attraverso la valle del fiume Chiascio</p>
-            <a href="/pagine/valdichiascio.html" class="btn-primary">Scopri di più</a>
-          </div>
-        </div>
-
-        <div class="route-item">
-          <img src="https://static.wixstatic.com/media/6e451a_a06109b380bb44d58e745857ade16749~mv2.jpg/v1/fill/w_300,h_200,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/Abbazia%20Castel%20dAlfiolo.jpg" alt="Tour dei Castelli">
-          <div class="route-item-content">
-            <h3>Tour dei Castelli</h3>
-            <p>Scopri i castelli medievali del territorio</p>
-            <a href="/pagine/tourcastelli.html" class="btn-primary">Scopri di più</a>
-          </div>
-        </div>
-
-        <div class="route-item">
-          <img src="https://static.wixstatic.com/media/6e451a_6f6b7d96cac44fa59a78e2a211027010~mv2.jpg/v1/fill/w_300,h_200,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/laghetto%20Fassia.jpg" alt="Laghetti Scagliae">
-          <div class="route-item-content">
-            <h3>Laghetti Scagliae</h3>
-            <p>Percorso tra i laghi di montagna</p>
-            <a href="/pagine/laghetti-scagliae.html" class="btn-primary">Scopri di più</a>
-          </div>
-        </div>
-
-        <div class="route-item">
-          <img src="https://static.wixstatic.com/media/6e451a_92ef8069d0634d97a847441bb19f52ee~mv2.jpg/v1/fill/w_300,h_200,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/Mauretta01.jpg" alt="Mauretta">
-          <div class="route-item-content">
-            <h3>Mauretta</h3>
-            <p>Escursione panoramica</p>
-            <a href="/pagine/mauretta.html" class="btn-primary">Scopri di più</a>
-          </div>
-        </div>
-
-        <div class="route-item">
-          <img src="https://static.wixstatic.com/media/6e451a_d294b1169ff7444a97592504bd8aa62c~mv2.jpg/v1/fill/w_300,h_200,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/pian%20di%20spilli.jpg" alt="Monte Cucco">
-          <div class="route-item-content">
-            <h3>Monte Cucco</h3>
-            <p>Salita impegnativa con viste spettacolari</p>
-            <a href="/pagine/montecucco.html" class="btn-primary">Scopri di più</a>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="site-footer">
-    <div class="container">
-      <p>&copy; 2025 SlowBike Gubbio. Tutti i diritti riservati.</p>
-      <div class="footer-links">
-        <a href="/pagine/contattaci.html">Contattaci</a>
-        <a href="/pagine/blog.html">Blog</a>
-      </div>
-    </div>
-  </footer>
+  <script src="/js/mobile-fix.js"></script>
 
 </body>
 </html>
