--- a/pagine/404.html
+++ b/pagine/404.html
@@ -2,110 +2,35 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
-  <title>404 - Pagina Non Trovata | SlowBike Gubbio</title>
+  <title>404 | SlowBike Gubbio</title>
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/css/subpages.css" />
   <style>
-    .error-page {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      min-height: 60vh;
-      text-align: center;
-      padding: 60px 20px;
-    }
-    .error-code {
-      font-size: 120px;
-      font-weight: bold;
-      color: #1E9E3A;
+    html, body {
       margin: 0;
-      line-height: 1;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
     }
-    .error-title {
-      font-size: 32px;
-      color: #333;
-      margin: 20px 0;
-    }
-    .error-text {
-      font-size: 18px;
-      color: #666;
-      max-width: 600px;
-      margin: 20px auto;
-    }
-    .error-actions {
-      display: flex;
-      gap: 20px;
-      margin-top: 40px;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-    .btn-404 {
-      display: inline-block;
-      padding: 15px 30px;
-      background: #1E9E3A;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 4px;
-      font-weight: 600;
-      transition: background 0.3s;
-    }
-    .btn-404:hover {
-      background: #168c32;
-    }
-    .btn-404-secondary {
-      background: #fff;
-      color: #1E9E3A;
-      border: 2px solid #1E9E3A;
-    }
-    .btn-404-secondary:hover {
-      background: #f8f8f8;
+    iframe {
+      position: fixed;
+      left: 0px;
+      top: -29px;
+      width: 100%;
+      height: 105%;
+      border: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      z-index: 999999;
     }
   </style>
 </head>
 <body>
 
-  <!-- Header -->
-  <header class="site-header">
-    <div class="container">
-      <a href="/" class="logo">
-        <img src="https://static.wixstatic.com/media/6e451a_67e1a060deac4653af1e1de45458021e~mv2.png/v1/fill/w_49,h_48,al_c,q_85,usm_0.66_1.00_0.01,blur_2,enc_avif,quality_auto/cropped-SlowBikeGubbio%20(1)_edited.png" alt="SlowBike Gubbio Logo">
-        <span>SlowBikeGubbio</span>
-      </a>
-      <nav class="main-nav">
-        <a href="/">Home</a>
-        <a href="/pagine/percorsi.html">Percorsi</a>
-        <a href="/pagine/blog.html">Blog</a>
-        <a href="/pagine/contattaci.html">Contattaci</a>
-      </nav>
-    </div>
-  </header>
+<iframe src="https://gabrielelilli1105.wixstudio.com/slowbike/404"></iframe>
 
-  <!-- Error Page Content -->
-  <section class="error-page">
-    <div class="error-code">404</div>
-    <h1 class="error-title">Pagina Non Trovata</h1>
-    <p class="error-text">
-      Ops! La pagina che stai cercando non esiste o è stata spostata.
-      Torna alla home page o esplora i nostri percorsi.
-    </p>
-    <div class="error-actions">
-      <a href="/" class="btn-404">Torna alla Home</a>
-      <a href="/pagine/percorsi.html" class="btn-404 btn-404-secondary">Vedi i Percorsi</a>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="site-footer">
-    <div class="container">
-      <p>&copy; 2025 SlowBike Gubbio. Tutti i diritti riservati.</p>
-      <div class="footer-links">
-        <a href="/pagine/contattaci.html">Contattaci</a>
-        <a href="/pagine/blog.html">Blog</a>
-      </div>
-    </div>
-  </footer>
+<script src="/js/mobile-fix.js"></script>
 
 </body>
 </html>
