--- a/pagine/mauretta.html
+++ b/pagine/mauretta.html
@@ -1,91 +1,1 @@
-<!DOCTYPE html>
-<html lang="it">
-<head>
-  <meta charset="UTF-8" />
-  <title>Mauretta | SlowBike Gubbio</title>
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/css/subpages.css" />
-</head>
-<body>
-
-  <!-- Header -->
-  <header class="site-header">
-    <div class="container">
-      <a href="/" class="logo">
-        <img src="https://static.wixstatic.com/media/6e451a_67e1a060deac4653af1e1de45458021e~mv2.png/v1/fill/w_49,h_48,al_c,q_85,usm_0.66_1.00_0.01,blur_2,enc_avif,quality_auto/cropped-SlowBikeGubbio%20(1)_edited.png" alt="SlowBike Gubbio Logo">
-        <span>SlowBikeGubbio</span>
-      </a>
-      <nav class="main-nav">
-        <a href="/">Home</a>
-        <a href="/pagine/percorsi.html">Percorsi</a>
-        <a href="/pagine/blog.html">Blog</a>
-        <a href="/pagine/contattaci.html">Contattaci</a>
-      </nav>
-    </div>
-  </header>
-
-  <!-- Route Detail -->
-  <section class="route-detail">
-    <div class="container">
-      <div class="route-detail-header">
-        <h1>Mauretta</h1>
-        <p class="route-description">Escursione panoramica verso Mauretta, con viste spettacolari sul territorio.</p>
-      </div>
-
-      <!-- Route Stats -->
-      <div class="route-stats">
-        <div class="route-stat">
-          <div class="route-stat-label">Distanza</div>
-          <div class="route-stat-value">28 km</div>
-        </div>
-        <div class="route-stat">
-          <div class="route-stat-label">Dislivello</div>
-          <div class="route-stat-value">450 m</div>
-        </div>
-        <div class="route-stat">
-          <div class="route-stat-label">Difficoltà</div>
-          <div class="route-stat-value">Media</div>
-        </div>
-        <div class="route-stat">
-          <div class="route-stat-label">Durata</div>
-          <div class="route-stat-value">2-3 ore</div>
-        </div>
-      </div>
-
-      <!-- Gallery -->
-      <div class="route-gallery">
-        <img src="https://static.wixstatic.com/media/6e451a_92ef8069d0634d97a847441bb19f52ee~mv2.jpg/v1/fill/w_400,h_300,al_c,q_80,enc_avif,quality_auto/Mauretta01.jpg" alt="Mauretta">
-      </div>
-
-      <!-- Description -->
-      <div class="route-description">
-        <h2>Descrizione del Percorso</h2>
-        <p>Escursione panoramica verso Mauretta, con viste spettacolari sul territorio.</p>
-        <p>Questo percorso offre un'esperienza unica nel territorio di Gubbio, combinando natura, storia e cultura in un itinerario indimenticabile.</p>
-      </div>
-
-      <!-- GPX Download -->
-      <div class="gpx-section">
-        <h3>Scarica la traccia GPX</h3>
-        <p>Porta con te il percorso sul tuo dispositivo GPS</p>
-        <a href="/gpx/mauretta.gpx" class="btn-download" download>Download GPX</a>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="site-footer">
-    <div class="container">
-      <p>&copy; 2025 SlowBike Gubbio. Tutti i diritti riservati.</p>
-      <div class="footer-links">
-        <a href="/pagine/contattaci.html">Contattaci</a>
-        <a href="/pagine/blog.html">Blog</a>
-        <a href="/pagine/percorsi.html">Tutti i Percorsi</a>
-      </div>
-    </div>
-  </footer>
-
-</body>
-</html>
+<meta http-equiv="refresh" content="0; url=https://slowbikegubbio.it/bevelle.html" />
