--- a/pagine/tourcastelli.html
+++ b/pagine/tourcastelli.html
@@ -2,103 +2,35 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
-  <title>Tour dei Castelli | SlowBike Gubbio</title>
+  <title>Tour Castelli | SlowBike Gubbio</title>
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/css/subpages.css" />
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+    }
+    iframe {
+      position: fixed;
+      left: 0px;
+      top: -29px;
+      width: 100%;
+      height: 105%;
+      border: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      z-index: 999999;
+    }
+  </style>
 </head>
 <body>
 
-  <!-- Header -->
-  <header class="site-header">
-    <div class="container">
-      <a href="/" class="logo">
-        <img src="https://static.wixstatic.com/media/6e451a_67e1a060deac4653af1e1de45458021e~mv2.png/v1/fill/w_49,h_48,al_c,q_85,usm_0.66_1.00_0.01,blur_2,enc_avif,quality_auto/cropped-SlowBikeGubbio%20(1)_edited.png" alt="SlowBike Gubbio Logo">
-        <span>SlowBikeGubbio</span>
-      </a>
-      <nav class="main-nav">
-        <a href="/">Home</a>
-        <a href="/pagine/percorsi.html">Percorsi</a>
-        <a href="/pagine/blog.html">Blog</a>
-        <a href="/pagine/contattaci.html">Contattaci</a>
-      </nav>
-    </div>
-  </header>
+  <iframe src="https://gabrielelilli1105.wixstudio.com/slowbike/tourcastelli"></iframe>
 
-  <!-- Route Detail -->
-  <section class="route-detail">
-    <div class="container">
-      <div class="route-detail-header">
-        <h1>Tour dei Castelli</h1>
-        <p class="route-description">
-          Un percorso affascinante attraverso i castelli medievali del territorio di Gubbio. 
-          Questa escursione ti porta alla scoperta delle antiche fortificazioni e delle loro storie secolari.
-        </p>
-      </div>
-
-      <!-- Route Stats -->
-      <div class="route-stats">
-        <div class="route-stat">
-          <div class="route-stat-label">Distanza</div>
-          <div class="route-stat-value">45 km</div>
-        </div>
-        <div class="route-stat">
-          <div class="route-stat-label">Dislivello</div>
-          <div class="route-stat-value">650 m</div>
-        </div>
-        <div class="route-stat">
-          <div class="route-stat-label">Difficoltà</div>
-          <div class="route-stat-value">Media</div>
-        </div>
-        <div class="route-stat">
-          <div class="route-stat-label">Durata</div>
-          <div class="route-stat-value">3-4 ore</div>
-        </div>
-      </div>
-
-      <!-- Gallery -->
-      <div class="route-gallery">
-        <img src="https://static.wixstatic.com/media/6e451a_a06109b380bb44d58e745857ade16749~mv2.jpg/v1/fill/w_400,h_300,al_c,q_80,enc_avif,quality_auto/Abbazia%20Castel%20dAlfiolo.jpg" alt="Abbazia Castel d'Alfiolo">
-        <img src="https://static.wixstatic.com/media/6e451a_4cc827c5f943449293f7484394869181~mv2.jpg/v1/fill/w_400,h_300,al_c,q_80,enc_avif,quality_auto/IMG-20221231-WA0003-1%20(1).jpg" alt="Veduta panoramica">
-      </div>
-
-      <!-- Description -->
-      <div class="route-description">
-        <h2>Descrizione del Percorso</h2>
-        <p>
-          Il Tour dei Castelli è un itinerario che unisce natura e storia. Partendo da Gubbio, 
-          si attraversano dolci colline e boschi per raggiungere le antiche fortificazioni che 
-          caratterizzano il territorio. Ogni castello racconta secoli di storia medievale e offre 
-          panorami mozzafiato sulla vallata.
-        </p>
-        <p>
-          Il percorso è adatto a ciclisti con una buona preparazione fisica, data la presenza di 
-          alcuni tratti in salita. La bellezza dei paesaggi e la ricchezza storica degli edifici 
-          visitati ripagano ampiamente la fatica.
-        </p>
-      </div>
-
-      <!-- GPX Download -->
-      <div class="gpx-section">
-        <h3>Scarica la traccia GPX</h3>
-        <p>Porta con te il percorso sul tuo dispositivo GPS</p>
-        <a href="/gpx/tour-castelli.gpx" class="btn-download" download>Download GPX</a>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="site-footer">
-    <div class="container">
-      <p>&copy; 2025 SlowBike Gubbio. Tutti i diritti riservati.</p>
-      <div class="footer-links">
-        <a href="/pagine/contattaci.html">Contattaci</a>
-        <a href="/pagine/blog.html">Blog</a>
-        <a href="/pagine/percorsi.html">Tutti i Percorsi</a>
-      </div>
-    </div>
-  </footer>
+  <script src="/js/mobile-fix.js"></script>
 
 </body>
 </html>
