--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Home | SlowBike Gubbio</title>
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/slowbike/css/style.css">
 </head>
 
 <body>
