--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </div>
 
   <!-- SCRIPT -->
-  <script src="/js/index.js"></script>
-  <script src="/js/iframe-url-sync.js"></script>
+  <script src="/slowbike/js/index.js"></script>
+  <script src="/slowbike/js/iframe-url-sync.js"></script>
 </body>
 </html>
