chore: update preloader video source URL

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <!-- PRELOADER -->
 <div id="preloader">
   <video autoplay muted playsinline>
-    <source src="https://slowbikegubbio.it/static/preloader.mp4" type="video/mp4">
+    <source src="https://slowbikegubbio.it/static/preloader/video.mp4" type="video/mp4">
     Il tuo browser non supporta il video HTML5.
   </video>
 </div>
