fix: script tag formatting in index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </div>
 
 <!-- SCRIPT -->
-<script src="/static/js/index.js" defer</script>
+<script src="/static/js/index.js" defer></script>
 
 </body>
 </html>
